[metadata]
name = ShellPride
version = 0.0.3

description = Package for printing pride flag decorators in the shell.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ccmorenos/ShellPride.git

license = MIT license
license_files = LICENSE

author = Catalina Moreno
author_email = ccatamorenos@gmail.com
maintainer = Catalina Moreno
maintainer_email = ccatamorenos@gmail.com


[options]
packages = find:

[options.packages.find]
where=.
include=ShellPride*

[options.entry_points]
console_scripts =
    pridesh = ShellPride:main
